Resolves: tdf#129347 ensure impress docking window has enabled input

the default inputmode is taken from the parent, if the templates dialog is open
when the sidebar is created then the template dialog has set the toplevel
window disabled-input

Change-Id: I27cd0a6d6127cc2033a2304c27d72b88f16b0b1a
Reviewed-on: https://gerrit.libreoffice.org/85119
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>